Retail Lending-Production/src/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Prop_Purchase_from__c</fullName>
        <description>Choose the type of property</description>
        <inlineHelpText>Choose the type of property&quot;Eg:Assignment Property,Builder Property&quot;.</inlineHelpText>
        <label>Prop Purchase From</label>
        <picklist>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_Registered__c</fullName>
        <inlineHelpText>Choose whether Property Registered &quot;Eg:Yes/No&quot;.</inlineHelpText>
        <label>Prop Registered</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_Type__c</fullName>
        <description>choose the property type</description>
        <inlineHelpText>Choose the type of the property&quot;Eg:Apartment,Land,Composite,Etc&quot;.</inlineHelpText>
        <label>Prop Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apartment / Villa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land / Plot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension / Renovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Office / Showroom / Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Construction on own land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Land Purchase+Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Extension / Renovation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_by_builder__c</fullName>
        <description>Enter the name of the builder</description>
        <inlineHelpText>Enter the name of the builder&quot;Eg:DLF&quot;.</inlineHelpText>
        <label>Prop by builder</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prop_cmv__c</fullName>
        <description>Enter the current Market Value amount</description>
        <inlineHelpText>Enter the amount for Current market value&quot;Eg:Rs 800000&quot;.</inlineHelpText>
        <label>Prop CMV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prop_govt_approved__c</fullName>
        <description>Check whether Government authorities approved are not</description>
        <inlineHelpText>Choose whether Property Approved by Govt&quot;Eg&quot;Yes/No&quot;.</inlineHelpText>
        <label>Prop govt approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_govt_approved_name__c</fullName>
        <description>Enter the name of the authority</description>
        <inlineHelpText>Enter the name of the Authority which approved&quot;Eg:Govt &quot;.</inlineHelpText>
        <label>Prop govt approved name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prop_need_const_loan__c</fullName>
        <label>Prop need const loan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_occupancy__c</fullName>
        <description>Choose the type of the property</description>
        <inlineHelpText>Choose the type of the property&quot;Eg:Commercial/rented out,Residential/Rented out&quot;.</inlineHelpText>
        <label>Prop Occupancy</label>
        <picklist>
            <picklistValues>
                <fullName>Self occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rented Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_plan_ready__c</fullName>
        <inlineHelpText>Choose whether sanctioned plan obtained or not&quot;Eg:Yes/No&quot;.</inlineHelpText>
        <label>Prop plan ready</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_plan_rec_dt__c</fullName>
        <inlineHelpText>How much time required to get the sanctioned plan&quot;Eg:6 months&quot;.</inlineHelpText>
        <label>Prop plan rec dt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prop_price__c</fullName>
        <description>Enter the amount for Purchasing</description>
        <inlineHelpText>Enter the amount for purchase cost&quot;Eg:Rs 700000&quot;.</inlineHelpText>
        <label>Prop price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <label>Property Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Class__c</fullName>
        <label>Property Class</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Developed_as__c</fullName>
        <description>is it a township or a mixed use development - 

mixed use : multifamily + retail, office etc.
township may be pure residential or a mixed use

if it is a mixed use &amp; a township, use the value township.
it is is neither , keep it blank</description>
        <inlineHelpText>is it a township or a mixed use development - 

mixed use : multifamily + retail, office etc.
township may be pure residential or a mixed use

if it is a mixed use &amp; a township, use the value township.
it is is neither , keep it blank</inlineHelpText>
        <label>Property Developed as</label>
        <picklist>
            <picklistValues>
                <fullName>Township</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Property (Property Owner)</relationshipLabel>
        <relationshipName>Property1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Subtype__c</fullName>
        <label>Property Subtype</label>
        <picklist>
            <controllingField>Property_Type__c</controllingField>
            <picklistValues>
                <fullName>Low Rise Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Rise Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Rise Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Suites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Condos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flex Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution/Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Terminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Standing Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Box Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Box Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Use Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Regional Mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Neighborhood Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Power Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Strip Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Open Air/Lifestyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Theme/Tourist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Outlet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>MultiFamily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior/Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Farm/Ranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <label>Property Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_use__c</fullName>
        <label>Property use</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Cost__c</fullName>
        <description>Enter the purchase cost</description>
        <inlineHelpText>Enter the amount for purchase cost&quot;Eg:Rs 700000&quot;.</inlineHelpText>
        <label>Total Purchase Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Amenities__c</fullName>
        <label>Rental Amenities</label>
        <picklist>
            <picklistValues>
                <fullName>Pool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Tub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scenic View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Near Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Near Lake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tennis/Basketball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Grill</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Restrooms_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrooms Installed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Center_Hours__c</fullName>
        <label>Retail Center Hours</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Days_Hours__c</fullName>
        <label>Retail Days/Hours</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev_Par__c</fullName>
        <label>Rev/Par</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <label>Roof Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corrigated Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shingles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Room_Revenue__c</fullName>
        <label>Room Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School_District__c</fullName>
        <label>School District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siding_Wall_Type__c</fullName>
        <label>Siding/Wall Type</label>
        <picklist>
            <picklistValues>
                <fullName>Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stucco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sprinkler_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sprinkler System?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sprinkler_Type__c</fullName>
        <label>Sprinkler Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Wet Pipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate/Wet-Dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Pipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deluge &amp; Recycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SqFt_Office_Space__c</fullName>
        <label>SqFt Office Space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SqFt_of_Meeting_Space__c</fullName>
        <label>SqFt of Meeting Space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SqFt_of_Warehouse__c</fullName>
        <label>SqFt of Warehouse</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_Wage_Salary__c</fullName>
        <label>Staff Wage/Salary $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>Style</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submarket__c</fullName>
        <label>Submarket</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Map_ID__c</fullName>
        <label>Tax Map ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Paid_Utilties__c</fullName>
        <label>Tenant Paid Utilties</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garbage Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscape Service</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Timber_Notes__c</fullName>
        <label>Timber Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Topography__c</fullName>
        <label>Topography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hotel_Staff__c</fullName>
        <label># Total Hotel Staff</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sq_Ft__c</fullName>
        <label>Total Sq Ft</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Traffic_Count__c</fullName>
        <label>Traffic Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transportation_Near_Site__c</fullName>
        <label>Transportation Near Site</label>
        <picklist>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck/Interstate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Heating__c</fullName>
        <label>Type of Heating</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam Radiant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geothermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Property__c</fullName>
        <label>Type of Property</label>
        <picklist>
            <picklistValues>
                <fullName>Apartment / Villa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land / Plot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension / Renovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Office / Showroom / Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Construction on own land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Land Purchase+Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Extension / Renovation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Underground_Tanks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Underground Tanks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Property</relationshipLabel>
        <relationshipName>Property</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label># Units</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usable_Sq_Ft__c</fullName>
        <label>Usable Sq Ft</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilties_to_Site__c</fullName>
        <label>Utilties to Site</label>
        <picklist>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Water__c</fullName>
        <label>Water</label>
        <picklist>
            <picklistValues>
                <fullName>Separate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Renovated__c</fullName>
        <label>Year Renovated</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zoning__c</fullName>
        <label>Zoning</label>
        <picklist>
            <picklistValues>
                <fullName>Central Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Density Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Use Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storefront Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1 Residential: 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 Residential: 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3 Residential: 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R5 Residential: 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R7 Residential: 7000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R10 Residential: 10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R20 Residential: 25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Farm/Forest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Use Ordinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_1_Bedroom_Units__c</fullName>
        <label># of 1 Bedroom Units</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_2_Bedroom_Units__c</fullName>
        <label># of 2 Bedroom Units</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_3_Bedroom_Units__c</fullName>
        <label># of 3 Bedroom Units</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Bathrooms__c</fullName>
        <label># of Bathrooms</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Bedrooms__c</fullName>
        <label># of Bedrooms</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Beds__c</fullName>
        <label># of Beds</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Guest_Rooms__c</fullName>
        <label># of Guest Rooms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Guest_Suites__c</fullName>
        <label># of Guest Suites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Studio_Units__c</fullName>
        <label># of Studio Units</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Builder_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Property_Subtype__c</columns>
        <columns>Location__c</columns>
        <columns>Property_City__c</columns>
        <columns>Development_Stage__c</columns>
        <columns>Property_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Builder_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Property_Subtype__c</columns>
        <columns>Location__c</columns>
        <columns>Property_City__c</columns>
        <columns>Development_Stage__c</columns>
        <columns>Property_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Last Week</label>
    </listViews>
</CustomObject>